# battleships

./: CMakeLists.txt
sources/: .$uml class.drawio.bkp  Board.cpp  Board.h  Button.cpp  Button.h  GameManager.cpp  GameManager.h  Matrix.h  Mouse.cpp  Mouse.h  Player.cpp  Player.h  Renderables.cpp  Renderables.h  Spritefactory.cpp  Spritefactory.h  Vec2Utils.h  backup.txt  main.cpp  uml class.drawio
